--- a/assets/css/demos/demo-18.css
+++ b/assets/css/demos/demo-18.css
@@ -159,7 +159,6 @@
   -webkit-transform: translateY(0);
           transform: translateY(0);
   -ms-transform: translateY(0);
-  border: 0.1rem solid #fff;
   border-top-width: 0;
   border-bottom-width: 0;
   padding: 6rem 2rem;
@@ -778,6 +777,11 @@
     margin-left: -8rem;
   }
 }
+@media (max-width: 575.98px) {
+  .gallery .content-right {
+    margin-left: 0rem;
+  }
+}
 
 .heading .subtitle {
   font-size: 2.6rem;
@@ -787,6 +791,13 @@
   color: #222;
   margin: 0;
   margin-left: -24rem;
+}
+@media (max-width: 575.98px) {
+  .heading .subtitle {
+    margin-left: 0rem;
+    font-size: 1.5rem;
+    text-align: center;
+  }
 }
 .heading .title {
   font-size: 6rem;
