--- a/assets/css/demos/demo-15.css
+++ b/assets/css/demos/demo-15.css
@@ -1,8 +1,6 @@
 /* Demo 15 Homepage 15 */ /* Fonts */
-@import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800");
 @import url("https://fonts.cdnfonts.com/css/avenir-lt-pro");
 @import url("https://fonts.cdnfonts.com/css/avenir");
-/* font-family: 'Poppins', sans-serif; */
 .header-search-extended .btn.btn-primary {
   color: #fff;
   font-size: 2.2rem;
@@ -10,7 +8,7 @@
 }
 .header-search-extended .btn.btn-primary:hover, .header-search-extended .btn.btn-primary:focus, .header-search-extended .btn.btn-primary:active {
   background-color: transparent;
-  color: #cc9966;
+  color: #546d53;
 }
 .header-search-extended .form-control {
   padding-bottom: 0.5rem;
@@ -182,7 +180,7 @@
   display: none;
 }
 .product.product-4 .btn-product:hover, .product.product-4 .btn-product:focus {
-  background-color: #cc9966;
+  background-color: #546d53;
 }
 .product.product-4 .product-body {
   padding-bottom: 0;
@@ -450,7 +448,7 @@ blockquote cite span {
   max-width: 540px;
 }
 .footer .widget-about-info a {
-  color: #cc9966;
+  color: #546d53;
 }
 
 .footer-bottom .container,
