--- a/assets/css/demos/demo-16.css
+++ b/assets/css/demos/demo-16.css
@@ -1,8 +1,6 @@
 /* Demo 16 Homepage 16 */ /* Fonts */
-@import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800");
 @import url("https://fonts.cdnfonts.com/css/avenir-lt-pro");
 @import url("https://fonts.cdnfonts.com/css/avenir");
-/* font-family: 'Poppins', sans-serif; */
 .header.header-6 .header-middle {
   min-height: 86px;
 }
@@ -29,7 +27,7 @@
   height: 0.2rem;
 }
 .header.header-6 .header-bottom .menu > li:hover > a, .header.header-6 .header-bottom .menu > li:focus > a, .header.header-6 .header-bottom .menu > li.active > a {
-  color: #cc9966;
+  color: #546d53;
 }
 .header.header-6 .header-bottom .menu > li + li {
   margin-left: 0.8rem;
@@ -119,7 +117,7 @@
   margin-left: 0.4rem;
 }
 .intro-content .btn-outline-white {
-  border-color: #cc9966;
+  border-color: #546d53;
 }
 
 .intro-subtitle {
@@ -195,7 +193,7 @@
   display: none;
 }
 .product.product-4 .btn-product:hover, .product.product-4 .btn-product:focus {
-  background-color: #cc9966;
+  background-color: #546d53;
 }
 .product.product-4 .product-price {
   -webkit-box-orient: vertical;
@@ -305,7 +303,7 @@
   line-height: 1.7em;
 }
 .banner-main .banner-link {
-  color: #cc9966;
+  color: #546d53;
   text-transform: uppercase;
   letter-spacing: -0.01em;
 }
@@ -313,10 +311,10 @@
   margin-left: 0.5rem;
 }
 .banner-main .banner-link:hover, .banner-main .banner-link:focus {
-  color: #cc9966;
+  color: #546d53;
   text-decoration: none;
-  -webkit-box-shadow: 0 1px 0 0 #cc9966;
-          box-shadow: 0 1px 0 0 #cc9966;
+  -webkit-box-shadow: 0 1px 0 0 #546d53;
+          box-shadow: 0 1px 0 0 #546d53;
 }
 
 .banner-main-reverse .banner-content {
@@ -511,7 +509,7 @@
   margin-bottom: 1.8rem;
 }
 .footer .widget-about-info a {
-  color: #cc9966;
+  color: #546d53;
 }
 .footer .widget-title {
   text-transform: capitalize;
