--- a/assets/css/demos/demo-18.css
+++ b/assets/css/demos/demo-18.css
@@ -1,8 +1,24 @@
 /* Demo 18 Homepage 18 */ /* Fonts */
-@import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800");
 @import url("https://fonts.cdnfonts.com/css/avenir-lt-pro");
 @import url("https://fonts.cdnfonts.com/css/avenir");
-/* font-family: 'Poppins', sans-serif; */
+body {
+  font-family: "avenir lt pro", "avenir" !important;
+}
+
+p {
+  font-family: "avenir lt pro", "avenir" !important;
+  font-size: 16px;
+  color: black;
+}
+
+.ls-1px {
+  letter-spacing: 1px;
+}
+
+.ls-2px {
+  letter-spacing: 2px;
+}
+
 .mb-md-12 {
   margin-bottom: 5rem !important;
 }
@@ -12,12 +28,14 @@
   font-size: 2.2rem;
   letter-spacing: -0.025em;
   margin-bottom: 2.4rem;
+  font-family: "avenir lt pro" !important;
 }
 
 .title.brands,
 .title.instagram {
   font-size: 2rem;
   margin-bottom: 4.5rem;
+  letter-spacing: 1.3px;
 }
 
 .header.header-11 .logo {
@@ -35,7 +53,8 @@
 .header.header-11 .header-middle .menu > li > a {
   font-weight: 100;
   letter-spacing: 0.16em;
-  padding-right: 2rem;
+  padding-right: 1.4rem;
+  font-size: 1.3rem !important;
 }
 .header.header-11 .wishlist-link .wishlist-count,
 .header.header-11 .cart-dropdown .cart-count {
@@ -60,7 +79,7 @@
 }
 .header.header-11 .header-search-extended .btn.btn-primary:hover, .header.header-11 .header-search-extended .btn.btn-primary:focus, .header.header-11 .header-search-extended .btn.btn-primary:active {
   background-color: transparent;
-  color: #cc9966;
+  color: #546d53;
 }
 .header.header-11 .header-search-extended .form-control {
   padding-left: 0.7rem;
@@ -114,7 +133,6 @@
 .heading-ig .logo-hashtag {
   margin: auto;
   width: 15%;
-  margin-bottom: 2rem;
 }
 
 .title-desc {
@@ -122,7 +140,7 @@
 }
 
 .btn-outline-white {
-  border-color: #cc9966;
+  border-color: #546d53;
 }
 
 .btn-outline-primary-2:not(:hover):not(:focus) {
@@ -169,8 +187,8 @@
   background-position: center center;
 }
 .intro-slide .intro-content {
-  width: 740px;
-  max-width: 85%;
+  width: 800px;
+  max-width: 95%;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -188,7 +206,7 @@
   text-transform: uppercase;
   border: none;
   font-size: 1.3rem;
-  color: #cc9966;
+  color: #546d53;
   letter-spacing: 0.1em;
   min-width: 0;
 }
@@ -250,7 +268,7 @@
 }
 .banner-set-content h4 {
   text-transform: uppercase;
-  color: #cc9966;
+  color: #546d53;
   font-weight: 400;
   font-size: 1.6rem;
   margin-bottom: 1.6rem;
@@ -382,7 +400,7 @@
   border: 0.2rem solid #fff;
 }
 .banner-set-image .btn.banner-link:hover, .banner-set-image .btn.banner-link:focus, .banner-set-image .btn.banner-link:active {
-  color: #cc9966;
+  color: #546d53;
   background-color: #fff;
   border-color: #fff;
 }
@@ -400,7 +418,7 @@
 
 .intro-text {
   font-weight: 400;
-  font-size: 1.7rem;
+  font-size: 24px;
   line-height: 1.2;
   letter-spacing: 0.01em;
   text-transform: capitalize;
@@ -526,23 +544,22 @@
           flex: 0 0 100%;
   max-width: 100%;
   padding: 3.5rem 0 2rem;
-  font-family: "avenir lt pro";
+  font-family: "avenir lt pro", "avenir" !important;
+  letter-spacing: 2px;
 }
 .deal-content .btn {
   padding-top: 0.85rem;
   padding-bottom: 0.85rem;
-  font-weight: 500;
   color: #ffffff;
   background-color: transparent;
   border: 0.1rem solid #ebebeb;
 }
 .deal-content .btn:hover, .deal-content .btn:focus {
   color: #fff;
-  border-color: #cc9966;
-  background-color: #cc9966;
+  color: white !important;
 }
 .deal-content h4 {
-  font-size: 2rem;
+  font-size: 24px !important;
   color: #ffffff;
   font-weight: bold;
   line-height: 1.3;
@@ -555,22 +572,34 @@
   line-height: 1.2em;
   letter-spacing: 0.08em;
   margin-bottom: 3.6rem;
+  margin-top: 3rem;
 }
 .deal-content .product-title {
   font-weight: 800;
-  font-size: 3rem !important;
+  font-size: 16px !important;
   letter-spacing: 0.2em;
   margin-bottom: 0.7rem;
+  color: white !important;
+  font-family: "avenir lt pro";
+}
+.deal-content .product-tanggal {
+  font-weight: 800;
+  font-size: 28px !important;
+  letter-spacing: 0.2em;
+  margin-bottom: 0.7rem;
+  color: white !important;
+  font-family: "avenir lt pro";
 }
 .deal-content .product-price {
   font-weight: bold;
-  font-size: 3rem !important;
+  font-size: 18px !important;
   margin-bottom: 2.4rem;
   letter-spacing: 0.1rem;
 }
 .deal-content .new-price {
   font-weight: 600;
   color: #ffffff;
+  font-size: 26px !important;
 }
 
 .deal-image {
@@ -597,7 +626,7 @@
   padding: 1.6rem 0;
   margin-left: 1rem;
   margin-right: 1rem;
-  background-color: #cc9966;
+  background-color: #546d53;
   border-radius: 0.3rem;
   border: 0.1rem solid #e1e1e1;
 }
@@ -678,7 +707,7 @@
     color: #ffffff;
   }
   .deal-content .product-title {
-    font-size: 2.4rem;
+    font-size: 16px !important;
     color: #ffffff;
   }
   .deal-content .product-price {
@@ -713,8 +742,9 @@
 }
 
 .product-title {
-  font-size: 1.4rem;
+  font-size: 16px;
   letter-spacing: 0;
+  font-family: "avenir lt pro" !important;
 }
 
 .product-price {
@@ -753,7 +783,7 @@
   display: none;
 }
 .product.product-4 .btn-product:hover, .product.product-4 .btn-product:focus {
-  background-color: #cc9966;
+  background-color: #546d53;
 }
 
 .btn-product-icon:not(:hover):not(:focus) {
@@ -894,7 +924,7 @@
 .widget-posts .entry-content p {
   margin-bottom: 1.3rem;
   color: #3e3b3b;
-  font-size: 1.7rem;
+  font-size: 16px;
 }
 .widget-posts .read-more {
   font-size: 1.4rem;
@@ -908,6 +938,12 @@
 }
 .widget-posts .owl-simple .owl-nav.disabled + .owl-dots {
   margin-top: 1rem;
+}
+
+.entry-content p {
+  margin-bottom: 1.3rem;
+  color: #1b1a1a;
+  font-size: 16px;
 }
 
 .footer .icon-boxes-container {
@@ -938,7 +974,7 @@
 }
 .footer .icon-box-side .icon-box-icon {
   min-width: 7rem;
-  color: #cc9966;
+  color: #546d53;
   font-size: 4rem;
 }
 .footer .icon-box-side .icon-box-title {
@@ -969,7 +1005,8 @@
 .footer-about {
   list-style: decimal;
   text-align: justify;
-  margin: 3rem;
+  margin: 1rem;
+  margin-right: 3rem;
 }
 
 .social-icon {
@@ -1001,11 +1038,13 @@
   width: 35%;
 }
 .gallery .content-right {
-  margin-left: -8rem;
+  margin-left: -4rem;
+  margin-top: 2.3rem;
 }
 @media screen and (min-width: 768px) {
   .gallery .content-right {
-    margin-left: -8rem;
+    margin-left: -4rem;
+    margin-top: 2.3rem;
   }
 }
 @media (max-width: 575.98px) {
@@ -1033,6 +1072,14 @@
     text-align: center;
   }
 }
+.heading .subtitle-about {
+  font-size: 1.6rem;
+  line-height: 1.3;
+  letter-spacing: 0.07em;
+  color: #222;
+  text-align: center;
+  font-family: "avenir lt pro";
+}
 .heading .title {
   font-size: 4.3rem;
   font-weight: 800;
@@ -1042,6 +1089,14 @@
   margin: 0;
   margin-left: -13rem;
   font-family: "avenir lt pro";
+}
+@media (max-width: 575.98px) {
+  .heading .title {
+    margin-left: 0rem;
+    font-size: 2.8rem;
+    text-align: center;
+    margin-bottom: 3rem;
+  }
 }
 .heading .title-banner-2 {
   font-size: 4rem;
@@ -1103,7 +1158,7 @@
 }
 .instagram-feed a:hover,
 .instagram-feed a:focus {
-  color: #cc9966;
+  color: #546d53;
 }
 .owl-carousel .instagram-feed {
   margin-bottom: 0;
@@ -1165,7 +1220,7 @@
   color: inherit;
 }
 .instagram-feed-content a:hover, .instagram-feed-content a:focus {
-  color: #cc9966;
+  color: #546d53;
 }
 .instagram-feed-content a + a {
   margin-left: 2rem;
@@ -1223,6 +1278,28 @@
   display: none;
 }
 
+.testimonial {
+  padding: 37px;
+  margin-left: 1em;
+  text-align: left !important;
+  font-size: 20px;
+  color: black;
+}
+.testimonial p {
+  color: black;
+}
+
+.testimonial-two {
+  padding: 10px;
+  margin-left: 4em;
+  text-align: left !important;
+  font-size: 20px;
+  color: black;
+}
+.testimonial-two p {
+  color: black;
+}
+
 @media screen and (min-width: 576px) {
   .intro-subtitle {
     font-size: 1.3rem;
@@ -1233,7 +1310,7 @@
     line-height: 1.3em;
   }
   .intro-text {
-    font-size: 1.6rem;
+    font-size: 20px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1257,7 +1334,7 @@
     font-weight: 300;
   }
   .intro-text {
-    font-size: 1.8rem;
+    font-size: 24px !important;
   }
 }
 @media screen and (min-width: 576px) {
@@ -1324,7 +1401,7 @@
     font-weight: 300;
   }
   .intro-text {
-    font-size: 1.5rem;
+    font-size: 24px !important;
     font-weight: 200;
   }
   .intro-slider.owl-theme.owl-nav-inside .owl-dots {
