--- a/assets/css/demos/demo-6.css
+++ b/assets/css/demos/demo-6.css
@@ -1,8 +1,6 @@
 /* Demo 6 Homepage 6 */ /* Fonts */
-@import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800");
 @import url("https://fonts.cdnfonts.com/css/avenir-lt-pro");
 @import url("https://fonts.cdnfonts.com/css/avenir");
-/* font-family: 'Poppins', sans-serif; */
 .mobile-menu-toggler {
   color: #fff;
 }
@@ -281,7 +279,7 @@
   line-height: 1.625;
 }
 .deal-content h4 {
-  color: #cc9966;
+  color: #546d53;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.3;
@@ -364,7 +362,7 @@
 }
 .deal-countdown .countdown-amount {
   display: inline-block;
-  color: #cc9966;
+  color: #546d53;
   font-weight: 400;
   font-size: 2.4rem;
   letter-spacing: -0.025em;
@@ -468,7 +466,7 @@
 }
 
 .icon-box-icon {
-  color: #cc9966;
+  color: #546d53;
   font-size: 3.4rem;
   margin-bottom: 1.2rem;
 }
@@ -485,7 +483,7 @@
 }
 
 .primary-color {
-  color: #cc9966;
+  color: #546d53;
 }
 
 .cta-box {
@@ -571,7 +569,7 @@
   color: #777;
 }
 .blog-posts .read-more:hover, .blog-posts .read-more:focus {
-  color: #cc9966;
+  color: #546d53;
 }
 
 .read-more {
@@ -604,7 +602,7 @@
   margin-bottom: 1.8rem;
 }
 .footer .widget-about-info a {
-  color: #cc9966;
+  color: #546d53;
 }
 .footer .widget-title {
   text-transform: uppercase;
