--- a/assets/sass/pages/_product.scss
+++ b/assets/sass/pages/_product.scss
@@ -28,11 +28,11 @@
 	text-align: center;
 	width: 4rem;
 	height: 4rem;
-	color: #777;
+	color: #222121;
 	font-weight: normal;
 	font-size: 2rem;
 	line-height: 1;
-	background-color: #fff;
+	background-color: #ffffff59;
 	box-shadow: 2px 6px 16px rgba(51, 51, 51, .05);
 	transition: all .35s ease;
 
@@ -84,7 +84,7 @@
 	&:before {
 		opacity: 0;
 		visibility: hidden;
-		border: .1rem solid $primary-color;
+		// border: .1rem solid $primary-color;
 	}
 
 	&:after {
